@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,16 +27,12 @@ import javax.swing.UIDefaults;
  * @bug 8080972
  * @summary Audit Core Reflection in module java.desktop for places that will
  *          require changes to work with modules
- * @author Alexander Scherbatiy
- * @run main/othervm -Djava.security.manager=allow TestProxyLazyValue
+ * @run main TestProxyLazyValue
  */
 
 public class TestProxyLazyValue {
 
     public static void main(String[] args) throws Exception {
-        SwingUtilities.invokeAndWait(TestProxyLazyValue::testUserProxyLazyValue);
-        SwingUtilities.invokeAndWait(TestProxyLazyValue::testProxyLazyValue);
-        System.setSecurityManager(new SecurityManager());
         SwingUtilities.invokeAndWait(TestProxyLazyValue::testUserProxyLazyValue);
         SwingUtilities.invokeAndWait(TestProxyLazyValue::testProxyLazyValue);
     }
